--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,7 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Trip" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Vehicles" tabIcon="information-circle"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Location" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Guide" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab5Root" tabTitle="Hotels" tabIcon="contacts"></ion-tab>
 </ion-tabs>
