modifeid the tabs template

--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,7 +1,7 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Trip" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Vehicles" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Location" tabIcon="contacts"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="Guide" tabIcon="contacts"></ion-tab>
-  <ion-tab [root]="tab5Root" tabTitle="Hotels" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Trip" tabIcon="walk"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Vehicles" tabIcon="ios-car"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Location" tabIcon="pin"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Guide" tabIcon="person"></ion-tab>
+  <ion-tab [root]="tab5Root" tabTitle="Hotels" tabIcon="home"></ion-tab>
 </ion-tabs>
