--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,21 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>Home</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+<ion-slides pager="true">
+
+  <ion-slide *ngFor="let slide of slider" style="background-color: rgb(119, 240, 234)" >
+    <ion-toolbar>
+      <ion-buttons end>
+<button ion-button color="Secondary">Skip</button>
+      </ion-buttons>
+    </ion-toolbar>
+<img [src]="slide.image"/>
+<h2 [innerHTML]="slide.title"></h2>
+<p [innerHTML]="slide.description"></p>
+  </ion-slide>
+</ion-slides>
 </ion-content>
