--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,7 +1,8 @@
-<ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Trip" tabIcon="walk"></ion-tab>
+<ion-tabs color="primary" font-size="10px">
+  <ion-tab [root]="tab1Root" tabTitle="Trip" tabIcon="walk"  ></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Vehicles" tabIcon="ios-car"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Location" tabIcon="pin"></ion-tab>
   <ion-tab [root]="tab4Root" tabTitle="Guide" tabIcon="person"></ion-tab>
   <ion-tab [root]="tab5Root" tabTitle="Hotels" tabIcon="home"></ion-tab>
+
 </ion-tabs>
