--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,7 @@
 <ion-content padding>
 <ion-slides pager="true">
 
-  <ion-slide *ngFor="let slide of slider" style="background-color: rgb(119, 240, 234)" >
+  <ion-slide *ngFor="let slide of slider"  >
     <ion-toolbar>
       <ion-buttons end>
 <button ion-button color="Secondary">Skip</button>
