--- a/src/pages/location/location.html
+++ b/src/pages/location/location.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Location</ion-title>
+    <ion-title color="danger">Location</ion-title>
   </ion-navbar>
 
 </ion-header>
