--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,21 +1,6 @@
-<ion-header>
-  <ion-navbar color="primary">
-    <ion-title>Home</ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content padding>
-<ion-slides pager="true">
-
-  <ion-slide *ngFor="let slide of slider"  >
-    <ion-toolbar>
-      <ion-buttons end>
-<button ion-button color="Secondary">Skip</button>
-      </ion-buttons>
-    </ion-toolbar>
-<img [src]="slide.image"/>
-<h2 [innerHTML]="slide.title"></h2>
-<p [innerHTML]="slide.description"></p>
-  </ion-slide>
-</ion-slides>
-</ion-content>
+<div class="overlay" [style.display]="splash">
+  <div class="inner">
+    <img src="assets/imgs/1.jpeg"/>
+    <h1>Trending coding</h1>
+  </div>
+</div>
