--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs color="primary" font-size="10px">
+<ion-tabs color="primary" selectedIndex="2" >
   <ion-tab [root]="tab1Root" tabTitle="Trip" tabIcon="walk"  ></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Vehicles" tabIcon="ios-car"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Location" tabIcon="pin"></ion-tab>
