--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,10 @@
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
 
+ 
+  <script  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgbIb1BGqR0CPm0-FybqV7I-WJyyakr3c"
+  type="text/javascript"></script>
+
   <!-- The vendor js is generated during the build process
        It contains all of the dependencies in node_modules -->
   <script src="build/vendor.js"></script>
