--- a/src/pages/hotels/hotels.html
+++ b/src/pages/hotels/hotels.html
@@ -1,9 +1,4 @@
-<!--
-  Generated template for the HotelsPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar color="danger">
@@ -14,5 +9,24 @@
 
 
 <ion-content padding>
+
+  <ion-card>
+
+    <ion-item class="hotel1">
+      <ion-fab right top>
+          <button ion-fab  class="hotel-icon">
+            <ion-icon name="pin"></ion-icon>
+          </button>
+        </ion-fab>
+   </ion-item>
+       
+     <ion-item>
+        <ion-icon name="ios-home" item-start large></ion-icon>
+        <h5>lake serenity boutique hotel</h5>
+        <p>Gonapitiya Road, Ratnapura</p>
+      </ion-item>
+
+    </ion-card>
+
 
 </ion-content>
