add vehicle placeses and hotels

--- a/src/pages/hotels/hotels.html
+++ b/src/pages/hotels/hotels.html
@@ -28,5 +28,22 @@
 
     </ion-card>
 
+    <ion-card>
+
+      <ion-item class="hotel2">
+        <ion-fab right top>
+            <button ion-fab  class="hotel-icon1">
+              <ion-icon name="pin"></ion-icon>
+            </button>
+          </ion-fab>
+     </ion-item>
+         
+       <ion-item>
+          <ion-icon name="ios-home" item-start large></ion-icon>
+          <h5>Serene Villa Ratnapura</h5>
+          <p>245/55 A4 Ratnapura</p>
+        </ion-item>
+  
+      </ion-card>
 
 </ion-content>
