--- a/src/pages/guide/guide.html
+++ b/src/pages/guide/guide.html
@@ -1,9 +1,4 @@
-<!--
-  Generated template for the GuidePage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar color="danger">
@@ -13,6 +8,74 @@
 </ion-header>
 
 
+ 
+
 <ion-content padding>
+  <ion-list>
+  <ion-item>
+    <ion-thumbnail item-start>
+      <img src="assets/imgs/5.jpg">
+    </ion-thumbnail>
+    <h2>sarath kumara</h2>
+    <p></p>
+    <button ion-button clear item-end>View</button>
+  </ion-item>
+</ion-list>
+
+<ion-list>
+  <ion-item>
+    <ion-thumbnail item-start>
+      <img src="assets/imgs/4.jpg">
+    </ion-thumbnail>
+    <h2>nihal perera</h2>
+    <p></p>
+    <button ion-button clear item-end>View</button>
+  </ion-item>
+
+  <ion-list>
+    <ion-item>
+      <ion-thumbnail item-start>
+        <img src="assets/imgs/7.jpg">
+      </ion-thumbnail>
+      <h2>rodrigo nelson</h2>
+      <p></p>
+      <button ion-button clear item-end>View</button>
+    </ion-item>
+  </ion-list>
+
+</ion-list>
+
+<ion-list>
+  <ion-item>
+    <ion-thumbnail item-start>
+      <img src="assets/imgs/3.jpg">
+    </ion-thumbnail>
+    <h2>Hashan malawana</h2>
+    <p></p>
+    <button ion-button clear item-end>View</button>
+  </ion-item>
+</ion-list>
+
+<ion-list>
+  <ion-item>
+    <ion-thumbnail item-start>
+      <img src="assets/imgs/5.jpg">
+    </ion-thumbnail>
+    <h2>kalana koralagedara</h2>
+    <p></p>
+    <button ion-button clear item-end>View</button>
+  </ion-item>
+</ion-list>
+
+<ion-list>
+  <ion-item>
+    <ion-thumbnail item-start>
+      <img src="assets/imgs/2.jpg">
+    </ion-thumbnail>
+    <h2>Amarabandu rupasinghe</h2>
+    <p></p>
+    <button ion-button clear item-end>View</button>
+  </ion-item>
+</ion-list>
 
 </ion-content>
