--- a/src/pages/centauria/centauria.html
+++ b/src/pages/centauria/centauria.html
@@ -102,7 +102,7 @@
         </ion-col>
          <ion-col>
           <ion-icon name="flame-outline"></ion-icon>
-          <p>Hot Tubs</p>
+          <p>Hot Tub</p>
         </ion-col>
     </ion-row>
   
